--- a/CubeMxProject/phycore-stm32mp1-3_phyboard-sargas.ioc
+++ b/CubeMxProject/phycore-stm32mp1-3_phyboard-sargas.ioc
@@ -14,9 +14,9 @@ ANA1.Locked=true
 ANA1.Signal=ADCx_INP1
 BootLoader.IPs=DDR,RCC,IWDG2,TAMP,I2C4,QUADSPI,SDMMC1,SDMMC2,UART4,USB_OTG_HS,HASH1
 BootROM.IPs=RCC,TAMP
-CortexA7NS.IPs=IWDG2\:I,BSEC,DDR\:I,ETZPC,HSEM\:I,PWR,RCC\:I,RTC,TAMP\:I,DMA\:I,GIC,ETH1\:I,QUADSPI\:I,SDMMC2\:I,USBH_HS1\:I,FDCAN2\:I,I2C1\:I,SDMMC1\:I,UART4\:I,USART3\:I,USART1\:I,LTDC\:I,DCMI\:I,ADC1\:I,ADC2\:I,SPI1\:I,I2S1\:I,VREFBUF\:I,TIM5\:I,I2C4\:I,GPU\:I,USB_OTG_HS\:I,IPCC,SAI2\:I,RNG1,DSIHOST\:I,HASH1\:I,CRC1\:I,DMA1\:I,MDMA_A7NS\:I
-CortexA7S.IPs=BSEC\:I,DDR,ETZPC\:I,HSEM,PWR\:I,RCC,RNG1\:I,RTC\:I,TAMP,GIC\:I,IWDG2,I2C4,MDMA_A7S\:I
-CortexM4.IPs=IPCC\:I,ETZPC,FREERTOS\:I,HSEM,PWR,RCC,SYS\:I,DMA,NVIC\:I,OPENAMP\:I,DMA2\:I
+CortexA7NS.IPs=IWDG2\:I,BSEC,DDR\:I,ETZPC,HSEM\:I,PWR,RCC\:I,RTC,TAMP\:I,DMA\:I,GIC,ETH1\:I,QUADSPI\:I,SDMMC2\:I,USBH_HS1\:I,I2C1\:I,SDMMC1\:I,UART4\:I,USART1\:I,LTDC\:I,DCMI\:I,ADC1\:I,ADC2\:I,SPI1\:I,I2S1\:I,VREFBUF\:I,TIM5\:I,I2C4\:I,GPU\:I,USB_OTG_HS\:I,IPCC,SAI2\:I,RNG1,DSIHOST\:I,HASH1\:I,CRC1\:I,DMA1\:I,MDMA_A7NS\:I
+CortexA7S.IPs=IWDG2,BSEC\:I,DDR,ETZPC\:I,HSEM,PWR\:I,RCC,RNG1\:I,RTC\:I,TAMP,GIC\:I,I2C4,MDMA_A7S\:I
+CortexM4.IPs=IPCC\:I,ETZPC,FREERTOS\:I,HSEM,PWR,RCC,SYS\:I,DMA,NVIC\:I,OPENAMP\:I,DMA2\:I,USART3\:I,FDCAN2\:I
 DDR.ADDRESS_MAPPING=BRC
 DDR.ADDRMAP1=0x00080808
 DDR.ADDRMAP5=0x07070707
@@ -324,70 +324,88 @@ DDR_WEN.Signal=DDR_WEN
 DDR_ZQ.Locked=true
 DDR_ZQ.Mode=DDR3
 DDR_ZQ.Signal=DDR_ZQ
-Dma.DCMI.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.DCMI.2.EventEnable=DISABLE
-Dma.DCMI.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.DCMI.2.Instance=DMA1_Stream0
-Dma.DCMI.2.MDMA_Chaining=ENABLE
-Dma.DCMI.2.Mandatory=DISABLE
-Dma.DCMI.2.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DCMI.2.MemInc=DMA_MINC_ENABLE
-Dma.DCMI.2.Mode=DMA_NORMAL
-Dma.DCMI.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.DCMI.2.PeriphInc=DMA_PINC_DISABLE
-Dma.DCMI.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.DCMI.2.Priority=DMA_PRIORITY_LOW
-Dma.DCMI.2.RequestNumber=1
-Dma.DCMI.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber,MDMA_Chaining,Mandatory
-Dma.DCMI.2.SignalID=NONE
-Dma.DCMI.2.SyncEnable=DISABLE
-Dma.DCMI.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.DCMI.2.SyncRequestNumber=1
-Dma.DCMI.2.SyncSignalID=NONE
-Dma.Request0=SAI2_B
-Dma.Request1=SAI2_A
-Dma.Request2=DCMI
+Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DCMI.0.EventEnable=DISABLE
+Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.DCMI.0.Instance=DMA1_Stream0
+Dma.DCMI.0.MDMA_Chaining=ENABLE
+Dma.DCMI.0.Mandatory=DISABLE
+Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
+Dma.DCMI.0.Mode=DMA_NORMAL
+Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DCMI.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.DCMI.0.Priority=DMA_PRIORITY_LOW
+Dma.DCMI.0.RequestNumber=1
+Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber,MDMA_Chaining,Mandatory
+Dma.DCMI.0.SignalID=NONE
+Dma.DCMI.0.SyncEnable=DISABLE
+Dma.DCMI.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.DCMI.0.SyncRequestNumber=1
+Dma.DCMI.0.SyncSignalID=NONE
+Dma.Request0=DCMI
+Dma.Request1=SAI2_B
+Dma.Request2=SAI2_A
 Dma.RequestsNb=3
-Dma.SAI2_A.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SAI2_A.1.EventEnable=DISABLE
-Dma.SAI2_A.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SAI2_A.1.Instance=DMA1_Stream2
-Dma.SAI2_A.1.MDMA_Chaining=ENABLE
-Dma.SAI2_A.1.Mandatory=DISABLE
-Dma.SAI2_A.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SAI2_A.1.MemInc=DMA_MINC_ENABLE
-Dma.SAI2_A.1.Mode=DMA_NORMAL
-Dma.SAI2_A.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SAI2_A.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SAI2_A.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SAI2_A.1.Priority=DMA_PRIORITY_LOW
-Dma.SAI2_A.1.RequestNumber=1
-Dma.SAI2_A.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber,MDMA_Chaining,Mandatory
-Dma.SAI2_A.1.SignalID=NONE
-Dma.SAI2_A.1.SyncEnable=DISABLE
-Dma.SAI2_A.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SAI2_A.1.SyncRequestNumber=1
-Dma.SAI2_A.1.SyncSignalID=NONE
-Dma.SAI2_B.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SAI2_B.0.EventEnable=DISABLE
-Dma.SAI2_B.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SAI2_B.0.Instance=DMA1_Stream1
-Dma.SAI2_B.0.MDMA_Chaining=ENABLE
-Dma.SAI2_B.0.Mandatory=DISABLE
-Dma.SAI2_B.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SAI2_B.0.MemInc=DMA_MINC_ENABLE
-Dma.SAI2_B.0.Mode=DMA_NORMAL
-Dma.SAI2_B.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SAI2_B.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SAI2_B.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SAI2_B.0.Priority=DMA_PRIORITY_LOW
-Dma.SAI2_B.0.RequestNumber=1
-Dma.SAI2_B.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber,MDMA_Chaining,Mandatory
-Dma.SAI2_B.0.SignalID=NONE
-Dma.SAI2_B.0.SyncEnable=DISABLE
-Dma.SAI2_B.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SAI2_B.0.SyncRequestNumber=1
-Dma.SAI2_B.0.SyncSignalID=NONE
+Dma.SAI2_A.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SAI2_A.2.EventEnable=DISABLE
+Dma.SAI2_A.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SAI2_A.2.Instance=DMA1_Stream2
+Dma.SAI2_A.2.MDMA_Chaining=ENABLE
+Dma.SAI2_A.2.Mandatory=DISABLE
+Dma.SAI2_A.2.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SAI2_A.2.MemInc=DMA_MINC_ENABLE
+Dma.SAI2_A.2.Mode=DMA_NORMAL
+Dma.SAI2_A.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SAI2_A.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SAI2_A.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SAI2_A.2.Priority=DMA_PRIORITY_LOW
+Dma.SAI2_A.2.RequestNumber=1
+Dma.SAI2_A.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber,MDMA_Chaining,Mandatory
+Dma.SAI2_A.2.SignalID=NONE
+Dma.SAI2_A.2.SyncEnable=DISABLE
+Dma.SAI2_A.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SAI2_A.2.SyncRequestNumber=1
+Dma.SAI2_A.2.SyncSignalID=NONE
+Dma.SAI2_B.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SAI2_B.1.EventEnable=DISABLE
+Dma.SAI2_B.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SAI2_B.1.Instance=DMA1_Stream1
+Dma.SAI2_B.1.MDMA_Chaining=ENABLE
+Dma.SAI2_B.1.Mandatory=DISABLE
+Dma.SAI2_B.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SAI2_B.1.MemInc=DMA_MINC_ENABLE
+Dma.SAI2_B.1.Mode=DMA_NORMAL
+Dma.SAI2_B.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SAI2_B.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SAI2_B.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SAI2_B.1.Priority=DMA_PRIORITY_LOW
+Dma.SAI2_B.1.RequestNumber=1
+Dma.SAI2_B.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber,MDMA_Chaining,Mandatory
+Dma.SAI2_B.1.SignalID=NONE
+Dma.SAI2_B.1.SyncEnable=DISABLE
+Dma.SAI2_B.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SAI2_B.1.SyncRequestNumber=1
+Dma.SAI2_B.1.SyncSignalID=NONE
+FDCAN2.AutoRetransmission=ENABLE
+FDCAN2.DataPrescaler=3
+FDCAN2.DataTimeSeg1=5
+FDCAN2.DataTimeSeg2=2
+FDCAN2.FrameFormat=FDCAN_FRAME_FD_NO_BRS
+FDCAN2.IPParameters=FrameFormat,AutoRetransmission,ProtocolException,NominalPrescaler,NominalTimeSeg1,DataPrescaler,DataTimeSeg1,RxFifo0ElmtSize,RxFifo1ElmtSize,RxBuffersNbr,RxBufferSize,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,TxElmtSize,DataTimeSeg2,RxFifo0ElmtsNbr
+FDCAN2.NominalPrescaler=3
+FDCAN2.NominalTimeSeg1=5
+FDCAN2.ProtocolException=ENABLE
+FDCAN2.RxBufferSize=FDCAN_DATA_BYTES_64
+FDCAN2.RxBuffersNbr=8
+FDCAN2.RxFifo0ElmtSize=FDCAN_DATA_BYTES_64
+FDCAN2.RxFifo0ElmtsNbr=8
+FDCAN2.RxFifo1ElmtSize=FDCAN_DATA_BYTES_64
+FDCAN2.TxBuffersNbr=8
+FDCAN2.TxElmtSize=FDCAN_DATA_BYTES_64
+FDCAN2.TxEventsNbr=2
+FDCAN2.TxFifoQueueElmtsNbr=8
 File.Version=6
 GIC.ADC1_IRQn=true\:false\:High level
 GIC.DCMI_IRQn=true\:false\:High level
@@ -401,8 +419,6 @@ GIC.DMA1_Stream6_IRQn=true\:false\:High level
 GIC.DMA1_Stream7_IRQn=true\:false\:High level
 GIC.ETH1_IRQn=true\:false\:High level
 GIC.ETH1_WKUP_IRQn=true\:false\:High level
-GIC.FDCAN2_IT0_IRQn=true\:false\:High level
-GIC.FDCAN2_IT1_IRQn=true\:false\:High level
 GIC.GPU_IRQn=true\:false\:High level
 GIC.HASH1_IRQn=true\:false\:High level
 GIC.I2C1_ER_IRQn=true\:false\:High level
@@ -424,7 +440,6 @@ GIC.SDMMC2_IRQn=true\:false\:High level
 GIC.SPI1_IRQn=true\:false\:High level
 GIC.UART4_IRQn=true\:false\:High level
 GIC.USART1_IRQn=true\:false\:High level
-GIC.USART3_IRQn=true\:false\:High level
 GIC.USBH_OHCI_IRQn=true\:false\:High level
 GIC.WAKEUP_PIN_IRQn=true\:false\:High level
 GPIO.groupedBy=Group By Peripherals
@@ -763,6 +778,8 @@ PB10.Signal=USART3_TX
 PB11.Locked=true
 PB11.Mode=RGMII (Reduced GMII)
 PB11.Signal=ETH1_TX_CTL
+PB12.GPIOParameters=GPIO_PuPd
+PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.Locked=true
 PB12.Mode=Asynchronous
 PB12.Signal=USART3_RX
@@ -1069,12 +1086,12 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32MP157CACx
-ProjectManager.DeviceTreeLocation=
+ProjectManager.DeviceTreeLocation=D\:\\Projects\\BFH\\Integrationsprojekt\\phyboard-sargas\\CubeMxProject\\CA7\\DeviceTree\\
 ProjectManager.FirmwarePackage=STM32Cube FW_MP1 V1.5.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
@@ -1093,7 +1110,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETZPC_Init-ETZPC-false-HAL-true,5-MX_IPCC_Init-IPCC-false-HAL-true,6-MX_OPENAMP_Init-OPENAMP-false-HAL-false,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETZPC_Init-ETZPC-false-HAL-true,5-MX_IPCC_Init-IPCC-false-HAL-true,6-MX_OPENAMP_Init-OPENAMP-false-HAL-false,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_FDCAN2_Init-FDCAN2-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PER
 RCC.ADCFreq_Value=24000000
 RCC.AHB1234Freq_Value=208877929.6875
@@ -1263,7 +1280,9 @@ TIM5.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM5.IPParameters=Channel-PWM Generation4 CH4
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USART3.IPParameters=VirtualMode-Asynchronous
+USART3.BaudRate=921600
+USART3.IPParameters=VirtualMode-Asynchronous,BaudRate,OverSampling
+USART3.OverSampling=UART_OVERSAMPLING_8
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DM1.Locked=true
 USB_DM1.Mode=Enable
