--- a/CubeMxProject/phycore-stm32mp1-3_phyboard-sargas.ioc
+++ b/CubeMxProject/phycore-stm32mp1-3_phyboard-sargas.ioc
@@ -16,7 +16,7 @@ BootLoader.IPs=DDR,RCC,IWDG2,TAMP,I2C4,QUADSPI,SDMMC1,SDMMC2,UART4,USB_OTG_HS,HA
 BootROM.IPs=RCC,TAMP
 CortexA7NS.IPs=IWDG2\:I,BSEC,DDR\:I,ETZPC,HSEM\:I,PWR,RCC\:I,RTC,TAMP\:I,DMA\:I,GIC,ETH1\:I,QUADSPI\:I,SDMMC2\:I,USBH_HS1\:I,I2C1\:I,SDMMC1\:I,UART4\:I,USART1\:I,LTDC\:I,DCMI\:I,ADC1\:I,ADC2\:I,SPI1\:I,I2S1\:I,VREFBUF\:I,TIM5\:I,I2C4\:I,GPU\:I,USB_OTG_HS\:I,IPCC,SAI2\:I,RNG1,DSIHOST\:I,HASH1\:I,CRC1\:I,DMA1\:I,MDMA_A7NS\:I
 CortexA7S.IPs=IWDG2,BSEC\:I,DDR,ETZPC\:I,HSEM,PWR\:I,RCC,RNG1\:I,RTC\:I,TAMP,GIC\:I,I2C4,MDMA_A7S\:I
-CortexM4.IPs=IPCC\:I,ETZPC,FREERTOS\:I,HSEM,PWR,RCC,SYS\:I,DMA,NVIC\:I,OPENAMP\:I,DMA2\:I,USART3\:I,FDCAN2\:I
+CortexM4.IPs=IPCC\:I,ETZPC,FREERTOS\:I,HSEM,PWR,RCC,SYS\:I,DMA,NVIC\:I,OPENAMP\:I,USART3\:I,FDCAN2\:I,DMA2\:I
 DDR.ADDRESS_MAPPING=BRC
 DDR.ADDRMAP1=0x00080808
 DDR.ADDRMAP5=0x07070707
@@ -389,10 +389,10 @@ Dma.SAI2_B.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SAI2_B.1.SyncRequestNumber=1
 Dma.SAI2_B.1.SyncSignalID=NONE
 FDCAN2.AutoRetransmission=ENABLE
-FDCAN2.DataPrescaler=3
-FDCAN2.DataTimeSeg1=5
-FDCAN2.DataTimeSeg2=2
-FDCAN2.FrameFormat=FDCAN_FRAME_FD_NO_BRS
+FDCAN2.DataPrescaler=1
+FDCAN2.DataTimeSeg1=4
+FDCAN2.DataTimeSeg2=1
+FDCAN2.FrameFormat=FDCAN_FRAME_FD_BRS
 FDCAN2.IPParameters=FrameFormat,AutoRetransmission,ProtocolException,NominalPrescaler,NominalTimeSeg1,DataPrescaler,DataTimeSeg1,RxFifo0ElmtSize,RxFifo1ElmtSize,RxBuffersNbr,RxBufferSize,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,TxElmtSize,DataTimeSeg2,RxFifo0ElmtsNbr
 FDCAN2.NominalPrescaler=3
 FDCAN2.NominalTimeSeg1=5
